# urban_homeworks

./: .flake8  .flake8.bak  .gitignore  not_telegram.db  products.db  pyproject.toml  urbanbot.db
tests/: suite_12_3.py  test_12_3.py  tests_12_1.py  tests_12_2.py  tests_12_4.py
urban/eight_mod/: module_8_1.py  module_8_2.py  module_8_3.py
urban/eleventh_mod/: introspection.py  module_11_1.py
urban/fifth_mod/: module5hard.py  module_5_1.py  module_5_2.py  module_5_3.py  module_5_4.py
urban/first_mod/: datas.py  homework1.py  homework2.py  homework3.py  homework4.py  homework5.py  homework6.py  module1hard.py  mut_immut.py  set.py  strings.py  test.py  variables.py
urban/fourteenth_mod/: module_14_1.py  module_14_2.py
urban/fourteenth_mod/telegram_bot/: crud_functions.py  module_14_3.py  module_14_4.py  module_14_5.py
urban/fourteenth_mod/telegram_bot/keyboards/: keyboards.py
urban/fourteenth_mod/telegram_bot/routers/: __init__.py
urban/fourteenth_mod/telegram_bot/validators/: age_validator.py  email_validator.py  name_validator.py
urban/fourth/modules/: fake_math.py  module_4_1.py
urban/fourth_mod/: module_4_2.py
urban/fourth_mod/modules/: fake_math.py  true_math.py
urban/fourth_mod/practice/: soortings_test.py  sorting.py  sortings.py
urban/ninth_mod/: module_9_1.py  module_9_2.py  module_9_3.py  module_9_4.py  module_9_5.py  module_9_6.py  module_9_7.py
urban/second_mod/: breakpoints.py  module1hard.py  module2hard.py  module_2_2.py  module_2_3.py  module_2_4.py  module_2_5.py  tic-tac-toe.py
urban/seventeenth_mod/: alembic.ini  taskmanager.db  tmp
urban/seventeenth_mod/app/: main.py  schemas.py
urban/seventeenth_mod/app/backend/: db.py
urban/seventeenth_mod/app/migration/: env.py
urban/seventeenth_mod/app/models/: __init__.py  task.py  user.py
urban/seventeenth_mod/app/routers/: user.py  (+1 more)
urban/seventh/: module_7_1.py
urban/seventh_mod/: module_7_2.py  module_7_3.py  module_7_formating.py
urban/sixteenth_mod/: module_16_1.py  module_16_2.py  module_16_3.py  module_16_4.py  module_16_5.py  users.html
urban/sixteenth_mod/templates/: main.html  users.html
urban/sixth_mod/: module6hard.py  module_6_1.py  module_6_2.py  module_6_3.py
urban/task2/: urls.py  views.py
urban/tenth_mod/: module_10_1.py  module_10_2.py  module_10_3.py  module_10_4.py  module_10_5.py
urban/third_mod/: module3hard.py  module_3_1.py  module_3_2.py  module_3_3.py  module_3_4.py  module_3_5.py
urban/thirteenth_mod/: module_13_1.py
urban/thirteenth_mod/tele_bot/: module_13_2.py  module_13_3.py  module_13_4.py  module_13_5.py  module_13_6.py
urban/twelfth_mod/: rt_with_exceptions.py
(+9 files in other folders)
