[tool.poetry]
name = "urban"
version = "0.1.0"
description = ""
authors = ["thrve <hithrv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pickleshare = "^0.7.5"
colorama = "^0.4.6"
pygments = "^2.18.0"
prompt-toolkit = "^3.0.47"
setproctitle = "^1.3.3"
xonsh = {extras = ["full"], version = "^0.18.3"}
ipython = "^8.28.0"


[tool.ruff]
line-length = 120

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
