[tool.poetry]
name = "urban"
version = "0.1.0"
description = ""
authors = ["thrve <hithrv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pickleshare = "^0.7.5"
colorama = "^0.4.6"
pygments = "^2.18.0"
prompt-toolkit = "^3.0.47"
setproctitle = "^1.3.3"
xonsh = {extras = ["full"], version = "^0.18.3"}
ipython = "^8.28.0"
aiogram = "^3.13.1"
litecli = "^1.12.3"
email-validator = "^2.2.0"
numpy = "^2.1.3"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.plugins.dotenv]
ignore = "true"
location = ".env"

[tool.ruff]
line-length = 120
ignore = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
